--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
         "babel-loader": "^8.2.2",
         "d3": "^7.8.4",
         "d3-beeswarm": "^0.0.5",
+        "d3-legend": "^1.0.0",
         "d3-tip": "^0.9.1",
         "html-webpack-plugin": "^5.2.0",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "webpack": "^5.24.2",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2"
+        "react-dom": "^17.0.1"
+    },
+    "devDependencies": {
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.4",
+        "webpack": "^5.81.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^3.11.3"
     }
 }
