--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "start": "webpack serve --hot --mode production",
-        "build": "webpack --mode production"
+        "start": "webpack-dev-server --config webpack.config.dev.js --mode development",
+        "build": "webpack --config webpack.config.prod.js --mode production",
+        "prepare": "run-s build copy-files",
+        "copy-files": "cp README.md dist && cp LICENSE dist"
     },
     "author": "",
     "license": "ISC",
@@ -20,8 +22,12 @@
         "html-webpack-plugin": "^5.2.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "webpack": "^5.24.2",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2"
+        "webpack": "^5.24.2"
+    },
+    "devDependencies": {
+        "css-loader": "^6.7.3",
+        "style-loader": "^3.3.2",
+        "webpack-cli": "^5.1.0",
+        "webpack-dev-server": "^4.15.0"
     }
 }
