--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "devDependencies": {
         "css-loader": "^6.7.3",
+        "npm-run-all": "^4.1.5",
         "style-loader": "^3.3.2",
         "webpack-cli": "^5.1.0",
         "webpack-dev-server": "^4.15.0"
