- add simple beeswarm - add html tests

--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
     "name": "el-beeswarm",
     "version": "0.2.1",
     "description": "",
-    "main": "src/index.js",
+    "main": "./dist/cjs/el_beeswarm.min.js",
+    "module": "./dist/esm/el_beeswarm.min.js",
+    "type": "module",
+    "exports": {
+      "require": "./dist/cjs/el_beeswarm.min.js",
+      "import": "./dist/esm/el_beeswarm.min.js"
+    },
     "scripts": {
-        "start": "webpack-dev-server --config webpack.config.dev.js --mode development",
-        "build": "webpack --config webpack.config.prod.js --mode production",
+        "start": "webpack-dev-server --config webpack.config.dev.cjs --mode development",
+        "build": "webpack --config webpack.config.prod.cjs --mode production",
         "prepare": "run-s build copy-files",
         "copy-files": "copy README.md dist && copy LICENSE dist"
     },
