--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "import": "./dist/esm/el_beeswarm.min.js"
     },
     "scripts": {
-        "start": "webpack-dev-server --config webpack.config.dev.cjs --mode development",
+        "start": "webpack serve --config webpack.config.dev.cjs --mode development",
         "build": "webpack --config webpack.config.prod.cjs --mode production",
         "prepare": "run-s build copy-files",
         "copy-files": "copy README.md dist && copy LICENSE dist"
@@ -23,18 +23,17 @@
         "@babel/preset-react": "^7.12.13",
         "babel-loader": "^8.2.2",
         "d3": "^7.8.4",
-        "d3-beeswarm": "^0.0.5",
-        "d3-legend": "^1.0.0",
-        "d3-tip": "^0.9.1",
-        "html-webpack-plugin": "^5.2.0",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "html-webpack-plugin": "^5.2.0"
     },
     "devDependencies": {
+        "css-loader": "^6.7.3",
+        "npm-run-all": "^4.1.5",
+        "or": "^0.2.0",
+        "style-loader": "^3.3.2",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
-        "webpack": "^5.81.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^3.11.3"
+        "webpack": "^5.82.1",
+        "webpack-cli": "^5.1.1",
+        "webpack-dev-server": "^4.15.0"
     }
 }
