--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
     "name": "el-beeswarm",
-    "version": "0.3.4",
+    "version": "0.3.5",
     "description": "",
     "main": "./dist/cjs/el_beeswarm.min.js",
     "module": "./dist/esm/el_beeswarm.min.js",
-    "type": "module",
-    "types": "index.d.ts",
+    "type": "commonjs",
+    "types": "src/typings/index.d.ts",
     "exports": {
         "require": "./dist/cjs/el_beeswarm.min.js",
         "import": "./dist/esm/el_beeswarm.min.js"
+    },
+    "bin": {
+        "server": "./.scannerwork/css-bundle/bin/server.js"
     },
     "scripts": {
         "start": "webpack serve --config webpack.config.dev.cjs --mode development",
         "build": "webpack --config webpack.config.prod.cjs --mode production",
         "prepare": "run-s build copy-files",
-        "copy-files": "copy README.md dist && copy LICENSE dist"
+        "copy-files": "copy README.md dist && copy LICENSE dist",
+        "sonar": "node sonar-project.js"
     },
     "repository": {
         "type": "git",
@@ -34,10 +38,19 @@
         "@babel/preset-react": "^7.12.13",
         "babel-loader": "^8.2.2",
         "d3": "^7.8.4",
-        "html-webpack-plugin": "^5.2.0"
+        "html-webpack-plugin": "^5.2.0",
+        "jest-sonar": "^0.2.16",
+        "sonar-scanner": "^3.1.0",
+        "sonarqube-scanner": "^3.0.1"
     },
     "devDependencies": {
         "css-loader": "^6.7.3",
+        "jasmine": "^5.0.0",
+        "jsdoc": "^4.0.2",
+        "karma": "^6.4.2",
+        "karma-chrome-launcher": "^3.2.0",
+        "karma-coverage": "^2.2.0",
+        "karma-jasmine": "^5.1.0",
         "npm-run-all": "^4.1.5",
         "or": "^0.2.0",
         "style-loader": "^3.3.2",
