--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
-      // outras opções...
+      "strict": false,
+      "typeRoots": ["./src/typings", "./node_modules/@types"],
+
     },
     "include": [
       "src/**/*",
