--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "start": "webpack serve --config webpack.config.dev.cjs --mode development",
         "build": "webpack --config webpack.config.prod.cjs --mode production",
         "prepare": "run-s build copy-files",
+        "test": "karma start --coverage  --watch=false --sourceMap=true --codeCoverage=true",
         "copy-files": "copy README.md dist && copy LICENSE dist",
         "sonar": "node sonar-project.js",
         "lint": "eslint .",
@@ -51,7 +52,9 @@
         "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "esm": "^3.2.25",
         "jasmine": "^5.0.0",
+        "jasmine-core": "^5.0.0",
         "jsdoc": "^4.0.2",
         "karma": "^6.4.2",
         "karma-chrome-launcher": "^3.2.0",
