--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
         "babel-loader": "^8.2.2",
         "d3": "^7.8.4",
         "html-webpack-plugin": "^5.2.0",
-        "jest-sonar": "^0.2.16",
-        "sonar-scanner": "^3.1.0",
-        "sonarqube-scanner": "^3.0.1"
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.22.1",
@@ -58,6 +56,7 @@
         "jasmine-core": "^5.0.0",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
+        "jest-sonar": "^0.2.16",
         "jsdoc": "^4.0.2",
         "karma": "^6.4.2",
         "karma-chrome-launcher": "^3.2.0",
@@ -66,6 +65,8 @@
         "npm-run-all": "^4.1.5",
         "or": "^0.2.0",
         "prettier": "^2.8.8",
+        "sonar-scanner": "^3.1.0",
+        "sonarqube-scanner": "^3.0.1",
         "style-loader": "^3.3.2",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
