--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "@babel/preset-react": "^7.12.13",
         "babel-loader": "^8.2.2",
         "d3": "^7.8.4",
-        "html-webpack-plugin": "^5.2.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
@@ -72,6 +71,7 @@
         "typescript": "^5.0.4",
         "webpack": "^5.82.1",
         "webpack-cli": "^5.1.1",
-        "webpack-dev-server": "^4.15.0"
+        "webpack-dev-server": "^4.15.0",
+        "webpack-manifest-plugin": "^5.0.0"
     }
 }
