--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "scripts": {
         "start": "webpack serve --config webpack.config.dev.cjs --mode development",
         "build": "webpack --config webpack.config.prod.cjs --mode production",
+        "bundle": "webpack --config webpack.config.lib.cjs --mode production",
         "prepare": "run-s build copy-files",
         "test": "jest --coverage",
         "copy-files": "copy README.md dist && copy LICENSE dist",
@@ -67,6 +68,7 @@
         "sonar-scanner": "^3.1.0",
         "sonarqube-scanner": "^3.0.1",
         "style-loader": "^3.3.2",
+        "terser-webpack-plugin": "^5.3.9",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
         "webpack": "^5.82.1",
